Setting up model, db connection, migration and rest basic stuff.

--- a/MyBudgetAPI/appsettings.json
+++ b/MyBudgetAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConection": "Server=DESKTOP-U01MAOE\\SQLEXPRESS; Initial Catalog=BudgetDB; User Id=CommanderAPI; Password=testowo;"
+  }
 }
