PATCH request for expense.

--- a/MyBudgetAPI/nlog.config
+++ b/MyBudgetAPI/nlog.config
@@ -18,12 +18,16 @@
 		
 		<target xsi:type="File" name="allfile" fileName="d:\BudgetAPILogs\nlog-all-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+
+		<target xsi:type="File" name="request-time" fileName="d:\BudgetAPILogs\request-time.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 	</targets>
 
 	<!-- rules to map from logger name to target -->
 	<rules>
 		<!--All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
-		<logger name="BudgetAPI.*" minlevel="Error" writeTo="exceptions" />
+		<logger name="MyBudgetAPI.*" minlevel="Error" writeTo="exceptions" />
+		<logger name="MyBudgetAPI.Middleware.RequestTimeMiddleware" minlevel="Trace" writeTo="request-time" />
 	</rules>
 </nlog>
