User login jwt authentication.

--- a/MyBudgetAPI/appsettings.json
+++ b/MyBudgetAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "http://budgetapi.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
