--- a/MyBudgetAPI/appsettings.json
+++ b/MyBudgetAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Authentication": {
-    "JwtKey": "PRIVATE_KEY",
+    "JwtKey": "this is my custom Secret key for authnetication",
     "JwtExpireDays": 15,
     "JwtIssuer": "http://budgetapi.com"
   },
