--- a/MyBudgetAPI/appsettings.json
+++ b/MyBudgetAPI/appsettings.json
@@ -13,6 +13,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConection": "Server=DESKTOP-U01MAOE\\SQLEXPRESS; Initial Catalog=BudgetDB; User Id=CommanderAPI; Password=testowo;"
+    //"DbConection": "Server=DESKTOP-U01MAOE\\SQLEXPRESS; Initial Catalog=BudgetDB; User Id=CommanderAPI; Password=testowo;"
+    // For docker db connection
+    "DbConection": "Server=ms-sql-server,1433; Initial Catalog=BudgetDB; User Id=sa; Password=Pa55w0rd2021;"
   }
 }
